# thesis_devel

./: README.md
examples/: #package.xml#  .#package.xml  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  typescript
examples/action/: Pose.action
examples/launch/: exabot.launch  exabot.launch~  publisher_subscriber.launch
examples/rviz/: exabot.rviz
examples/scripts/: #pose_publisher.py#  pose_action_client.py  pose_action_client.py~  pose_action_server.py  pose_action_server.py~  pose_publisher.py  pose_service_client.py  pose_service_client.py~  pose_service_server.py  pose_subscriber.py
examples/srv/: PoseAdd.srv
examples/urdf/: exabot.gv  exabot.urdf  exabot.xacro  exabot.xacro~  jabref.xml
examples/urdf/macros/: #world_link_joint.xacro#  cylinder_inertial.xacro  cylinder_inertial.xacro~  cylinder_link_joint.xacro  cylinder_link_joint.xacro~  world_link_joint.xacro~
examples/urdf/parts/: stand_link_joint.xacro~
mrk_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mrk_moveit_config/config/: controllers.yaml  controllers.yaml~  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ur5_gripper.srdf
mrk_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo.launch~  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch~  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context.launch~  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  trajectory_execution.launch.xml~  ur5_gripper_moveit_controller_manager.launch.xml  ur5_gripper_moveit_sensor_manager.launch.xml  ur_gripper_moveit_controller_manager.launch  ur_gripper_moveit_controller_manager.launch~  warehouse.launch
mrk_robot/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  typescript
mrk_robot/scripts/: .#pick_and_place.py  close_gripper.py  motion_test.py  motion_test.py~  moveHome.sh  move_beer.py  move_beer.py~  move_can.py  move_can.py~  move_right_left.py  move_test.py  move_test.py~  moveit_test.py  moveit_test.py~  openGripper.sh  open_gripper.py  path_move.py  path_move.py~  pick_and_place.py  pick_test.py  pick_test.py~
mrk_robot_support/: #closeGripper.sh#  .#closeGripper.sh  CMakeLists.txt  closeGripper.sh  closeGripper.sh~  moveGripper.sh~  moveUp.sh  moveUp.sh~  openGripper.sh  package.xml
mrk_robot_support/config/: #ur5_gripper_grasp_data.yaml#  controllers.yaml  controllers.yaml~  joint_names.yaml  joint_names.yaml~  ur5_gripper_grasp_data.yaml
mrk_robot_support/launch/: #ur5_rviz.launch#  grasp_generator_server.launch  ur5_gazebo.launch  ur5_gazebo_moveit.launch  ur5_gazebo_moveit.launch~  ur5_moveit.launch  (+5 more)
(+46 files in other folders)
